--- a/views/includes/controls/activityLevel_select.ejs
+++ b/views/includes/controls/activityLevel_select.ejs
@@ -1,5 +1,5 @@
 <label for="activityLevel">Temperament</label>
-<select id="activityLevel" name="activityLevel">
+<select id="activityLevel" name="activityLevel" <% if (searchParams.required) { %> required <% }%>>
   <option></option>
   <% dogTemperaments.map(temperament => { %>
     <option <% if (searchParams.activityLevel !== undefined && searchParams.activityLevel.trim() === temperament.trim()) { %> selected <% }%>> <%= temperament %></option>
