--- a/views/includes/controls/age_select.ejs
+++ b/views/includes/controls/age_select.ejs
@@ -1,5 +1,5 @@
 <label for="age">Age</label>
-<select id="age" name="age">
+<select id="age" name="age" <% if (searchParams.required) { %> required <% }%>>
   <option></option>
   <option <% if(searchParams.age == "Puppy") {%> selected <%}%>>Puppy</option>
   <option <% if(searchParams.age == "Adolescent") {%> selected <%}%>>Adolescent</option>
