--- a/views/includes/controls/breed_select.ejs
+++ b/views/includes/controls/breed_select.ejs
@@ -1,7 +1,8 @@
 <label for="breed">Breed</label>
-<select id="breed" name="breed">
+<select id="breed" name="breed" <% if (searchParams.required) { %> required <% }%>>
   <option></option>
   <% dogBreeds.map(breed => { %>
-    <option <% if (searchParams.breed === breed) { %> selected <% }%>> <%= breed %></option>
-  <% }) %>
+    <option <% if (searchParams.breed === breed) { %> selected <% } %>> <%= breed %></option>
+  <% }) %>  
 </select>
+
