--- a/views/includes/controls/fencedYard_select.ejs
+++ b/views/includes/controls/fencedYard_select.ejs
@@ -1,5 +1,5 @@
 <label for="fenced_yard">Needs Fenced Yard</label>
-<select id="fenced_yard" name="fenced_yard">
+<select id="fenced_yard" name="fenced_yard" <% if (searchParams.required) { %> required <% }%>>
   <option></option>
   <option <% if(searchParams.fenced_yard === true) {%> selected <%}%>>Yes</option>
   <option <% if(searchParams.fenced_yard === false) {%> selected <%}%>>No</option>
