--- a/views/includes/controls/size_select.ejs
+++ b/views/includes/controls/size_select.ejs
@@ -1,5 +1,5 @@
 <label for="size">Size</label>
-<select id="size" name="size">
+<select id="size" name="size" <% if (searchParams.required) { %> required <% }%>>
   <option></option>
   <option <% if(searchParams.size == "Large") {%> selected <%}%>>Large</option>
   <option <% if(searchParams.size == "Medium") {%> selected <%}%>>Medium</option>
