Fix for .env usage in the search

--- a/views/search/humans.ejs
+++ b/views/search/humans.ejs
@@ -10,7 +10,7 @@
     <section class="search">
       <form action="/search/humans" method="POST">
         <div class="filter">         
-          <%- include('../includes/controls/breed_select.ejs'); %>         
+          <%- include(__dirname+'/views/includes/controls/breed_select.ejs'); %>         
         </div>
         <div class="filter">
           <%- include('../includes/controls/size_select.ejs'); %>   
