--- a/views/includes/pagination.ejs
+++ b/views/includes/pagination.ejs
@@ -1,15 +1,15 @@
 <section style="text-align: center;">
-    <% if (currentPage !== 1 && previousPage !== 1) { %>
+    <% if (pageObject.currentPage !== 1 && pageObject.previousPage !== 1) { %>
       <a href="<%= page.path %>/?page=1">First</a>
     <% } %>
-    <% if (hasPreviousPage) { %>
-      <a href="<%= page.path %>/?page=<%= previousPage %>">Prev</a>
+    <% if (pageObject.hasPreviousPage) { %>
+      <a href="<%= page.path %>/?page=<%= pageObject.previousPage %>">Prev</a>
     <% } %>
-    <a href="<%= page.path %>/?page=<%= currentPage %>"><%= currentPage %></a>  
-    <% if (hasNextPage) { %>
-      <a href="<%= page.path %>/?page=<%= nextPage %>">Next</a>
+    <a href="<%= page.path %>/?page=<%= pageObject.currentPage %>"><%= pageObject.currentPage %></a>  
+    <% if (pageObject.hasNextPage) { %>
+      <a href="<%= page.path %>/?page=<%= pageObject.nextPage %>">Next</a>
     <% } %>
-    <% if (lastPage !== currentPage && nextPage !== lastPage) { %>
-      <a href="<%= page.path %>/?page=<%= lastPage %>">Last</a>
+    <% if (pageObject.lastPage !== pageObject.currentPage && pageObject.nextPage !== pageObject.lastPage) { %>
+      <a href="<%= page.path %>/?page=<%= pageObject.lastPage %>">Last</a>
     <% } %>
 </section>
