--- a/public/css/pets.css
+++ b/public/css/pets.css
@@ -69,6 +69,10 @@ label {
     display: block;
 }
 
+input:invalid {
+    border: 1px solid rgb(118, 118, 118);
+    background: white;
+}
 
 @media only screen and (min-width:801px) {
 
