--- a/views/search/pets/index.ejs
+++ b/views/search/pets/index.ejs
@@ -12,7 +12,6 @@
           <%- include('../../includes/controls/breed_select.ejs'); %>
         </div>
         <div class="filter">
-          <label for="size">Size</label>
           <%- include('../../includes/controls/size_select.ejs'); %>
         </div>
         <div class="filter">
@@ -33,9 +32,12 @@
     </section>
 
     <div class="twocol">
-      <% data.forEach(pet=>{ %>
+      <% data && data.forEach(pet => { %>
         <%- include(__dirname+'/views/includes/pet_card.ejs', {pet: pet})%>
-      <% }); %>
+      <% }) %>
+        <h3>
+          <%= !data ? "No pets were found with the information you searched for." : "" %>
+        </h3>
     </div>
     <!-- for pagination -->
     <%- include(__dirname+'/views/includes/pagination.ejs', {pageObject: pageObject}); %>
