fixed styling for images

--- a/public/css/pets.css
+++ b/public/css/pets.css
@@ -17,6 +17,11 @@
     display: none;
 }
 
+.card__image img {
+    max-width: 200px;
+    max-height: 200px;
+}
+
 .btn {
     float: left;
     display: block;
