removed async loading of css, caused flicker, added alt text

--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <% page.style.forEach(style=>{%>
-        <link rel="stylesheet" href="/css/<%= style %>.css" media="print" onload="this.media='all'">
+        <link rel="stylesheet" href="/css/<%= style %>.css">
     <%});%>
 
     <title><%= page.title %></title>
