--- a/views/includes/pet_card.ejs
+++ b/views/includes/pet_card.ejs
@@ -1,6 +1,6 @@
     <article class="card simple">
       <h2><%=pet.name%></h2>
-      <img src="<%= pet.imageUrl %>">
+      <img src="<%= pet.imageUrl %>" alt="A <%= pet.breed %> named <%= pet.name %>">
       <section class="details">
         <span class="label">Breed</span>
         <span>
