added favicon, change text color, added meta description tag

--- a/public/css/pretty.css
+++ b/public/css/pretty.css
@@ -45,7 +45,7 @@ nav a, div.auth a, div.auth button{
   padding: 5px;
   background-color: #ce7e46;
   text-decoration: none;
-  color: #682514;
+  color: #3d150b;
   border: 1px solid #2c0d05;
   border-radius: 5px;
   transition: background-color .5s;
