--- a/views/includes/controls/gender_select.ejs
+++ b/views/includes/controls/gender_select.ejs
@@ -1,6 +1,6 @@
 <label for="gender">Gender</label>
 <select id="gender" name="gender" <% if (searchParams.required) { %> required <% }%>>
-  <option></option>
+  <option label="Select Gender"></option>
   <option <% if(searchParams.gender == "Male") {%> selected <%}%>>Male</option>
   <option <% if(searchParams.gender == "Female") {%> selected <%}%>>Female</option>
 </select>
