--- a/views/admin/edit-pet.ejs
+++ b/views/admin/edit-pet.ejs
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
 <%- include('../includes/head.ejs') %>
-
+<body>
         <%- include('../includes/nav.ejs') %>
 
             <main>
@@ -15,11 +17,14 @@
                                     <h1 class="pet__name">Name: 
                                         <%= pet.name %>
                                     </h1>
-                                    <h2 class="pet__temperament">Temperament:
-                                        <%= pet.temperament %>
+                                    <h2 class="pet__temperament">Gender:
+                                        <%= pet.gender %>
                                     </h2>
                                     <h2 class="pet__age">Age:
                                         <%= pet.age %>
+                                    </h2>
+                                    <h2 class="pet__age">Size:
+                                        <%= pet.size %>
                                     </h2>
                                     <p class="pet__description">Description:
                                         <%= pet.description %>
