--- a/views/includes/controls/breed_select.ejs
+++ b/views/includes/controls/breed_select.ejs
@@ -1,6 +1,6 @@
 <label for="breed">Breed</label>
 <select id="breed" name="breed" <% if (searchParams.required) { %> required <% }%>>
-  <option></option>
+  <option label="Select A Breed"></option>
   <% dogBreeds.map(breed => { %>
     <option <% if (searchParams.breed === breed) { %> selected <% } %>> <%= breed %></option>
   <% }) %>  
