--- a/views/includes/pagination.ejs
+++ b/views/includes/pagination.ejs
@@ -1,4 +1,4 @@
-<section style="text-align: center;">
+<div style="text-align: center;">
     <% if (pageObject.currentPage !== 1 && pageObject.previousPage !== 1) { %>
       <a href="<%= page.path %>/?page=1">First</a>
     <% } %>
@@ -12,4 +12,4 @@
     <% if (pageObject.lastPage !== pageObject.currentPage && pageObject.nextPage !== pageObject.lastPage) { %>
       <a href="<%= page.path %>/?page=<%= pageObject.lastPage %>">Last</a>
     <% } %>
-</section>
+</div>
