--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -21,10 +21,10 @@ var path=page.path||path||'/';
     </nav>
     <div class="auth">
         <% if(userLevel > 0) {%>
-            <a href="/editUser">Edit User</a> 
+            <a href="/editUser" class="navi"> Edit User</a> 
             <form action="/logout" method="post">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                <button type="submit">Log Out</button>
+                <button type="submit" class="navi">Log Out</button>
             </form>
         <%} else {%>
             <a href="/signup">Sign Up</a>
