--- a/views/admin/edit-pet.ejs
+++ b/views/admin/edit-pet.ejs
@@ -15,8 +15,11 @@
                                     <h1 class="pet__name">Name: 
                                         <%= pet.name %>
                                     </h1>
-                                    <h2 class="pet__temperament">Temperament:
-                                        <%= pet.temperament %>
+                                    <h2 class="pet__breed">Breed:
+                                        <%= pet.breed %>
+                                    </h2>
+                                    <h2 class="pet__gender">Gender:
+                                        <%= pet.gender %>
                                     </h2>
                                     <h2 class="pet__age">Age:
                                         <%= pet.age %>
